@@ -20,171 +20,6 @@ package|;
 end_package
 begin_import
 import|import
-name|java
-operator|.
-name|io
-operator|.
-name|IOException
-import|;
-end_import
-begin_import
-import|import
-name|java
-operator|.
-name|io
-operator|.
-name|InputStream
-import|;
-end_import
-begin_import
-import|import
-name|java
-operator|.
-name|net
-operator|.
-name|ConnectException
-import|;
-end_import
-begin_import
-import|import
-name|java
-operator|.
-name|net
-operator|.
-name|SocketTimeoutException
-import|;
-end_import
-begin_import
-import|import
-name|java
-operator|.
-name|nio
-operator|.
-name|charset
-operator|.
-name|Charset
-import|;
-end_import
-begin_import
-import|import
-name|java
-operator|.
-name|nio
-operator|.
-name|charset
-operator|.
-name|StandardCharsets
-import|;
-end_import
-begin_import
-import|import
-name|java
-operator|.
-name|util
-operator|.
-name|Collection
-import|;
-end_import
-begin_import
-import|import
-name|java
-operator|.
-name|util
-operator|.
-name|Collections
-import|;
-end_import
-begin_import
-import|import
-name|java
-operator|.
-name|util
-operator|.
-name|Iterator
-import|;
-end_import
-begin_import
-import|import
-name|java
-operator|.
-name|util
-operator|.
-name|LinkedList
-import|;
-end_import
-begin_import
-import|import
-name|java
-operator|.
-name|util
-operator|.
-name|List
-import|;
-end_import
-begin_import
-import|import
-name|java
-operator|.
-name|util
-operator|.
-name|Locale
-import|;
-end_import
-begin_import
-import|import
-name|java
-operator|.
-name|util
-operator|.
-name|Set
-import|;
-end_import
-begin_import
-import|import
-name|java
-operator|.
-name|util
-operator|.
-name|concurrent
-operator|.
-name|Callable
-import|;
-end_import
-begin_import
-import|import
-name|java
-operator|.
-name|util
-operator|.
-name|concurrent
-operator|.
-name|ExecutorService
-import|;
-end_import
-begin_import
-import|import
-name|java
-operator|.
-name|util
-operator|.
-name|concurrent
-operator|.
-name|Executors
-import|;
-end_import
-begin_import
-import|import
-name|java
-operator|.
-name|util
-operator|.
-name|concurrent
-operator|.
-name|Future
-import|;
-end_import
-begin_import
-import|import
 name|org
 operator|.
 name|apache
@@ -367,21 +202,6 @@ operator|.
 name|methods
 operator|.
 name|HttpUriRequest
-import|;
-end_import
-begin_import
-import|import
-name|org
-operator|.
-name|apache
-operator|.
-name|http
-operator|.
-name|client
-operator|.
-name|params
-operator|.
-name|ClientPNames
 import|;
 end_import
 begin_import
@@ -816,6 +636,160 @@ operator|.
 name|slf4j
 operator|.
 name|LoggerFactory
+import|;
+end_import
+begin_import
+import|import
+name|java
+operator|.
+name|io
+operator|.
+name|IOException
+import|;
+end_import
+begin_import
+import|import
+name|java
+operator|.
+name|io
+operator|.
+name|InputStream
+import|;
+end_import
+begin_import
+import|import
+name|java
+operator|.
+name|net
+operator|.
+name|ConnectException
+import|;
+end_import
+begin_import
+import|import
+name|java
+operator|.
+name|net
+operator|.
+name|SocketTimeoutException
+import|;
+end_import
+begin_import
+import|import
+name|java
+operator|.
+name|nio
+operator|.
+name|charset
+operator|.
+name|StandardCharsets
+import|;
+end_import
+begin_import
+import|import
+name|java
+operator|.
+name|util
+operator|.
+name|Collection
+import|;
+end_import
+begin_import
+import|import
+name|java
+operator|.
+name|util
+operator|.
+name|Collections
+import|;
+end_import
+begin_import
+import|import
+name|java
+operator|.
+name|util
+operator|.
+name|Iterator
+import|;
+end_import
+begin_import
+import|import
+name|java
+operator|.
+name|util
+operator|.
+name|LinkedList
+import|;
+end_import
+begin_import
+import|import
+name|java
+operator|.
+name|util
+operator|.
+name|List
+import|;
+end_import
+begin_import
+import|import
+name|java
+operator|.
+name|util
+operator|.
+name|Locale
+import|;
+end_import
+begin_import
+import|import
+name|java
+operator|.
+name|util
+operator|.
+name|Set
+import|;
+end_import
+begin_import
+import|import
+name|java
+operator|.
+name|util
+operator|.
+name|concurrent
+operator|.
+name|Callable
+import|;
+end_import
+begin_import
+import|import
+name|java
+operator|.
+name|util
+operator|.
+name|concurrent
+operator|.
+name|ExecutorService
+import|;
+end_import
+begin_import
+import|import
+name|java
+operator|.
+name|util
+operator|.
+name|concurrent
+operator|.
+name|Executors
+import|;
+end_import
+begin_import
+import|import
+name|java
+operator|.
+name|util
+operator|.
+name|concurrent
+operator|.
+name|Future
 import|;
 end_import
 begin_class
@@ -2736,14 +2710,11 @@ throw|throw
 operator|new
 name|RemoteSolrException
 argument_list|(
+name|baseUrl
+argument_list|,
 name|httpStatus
 argument_list|,
-literal|"Server at "
-operator|+
-name|getBaseURL
-argument_list|()
-operator|+
-literal|" returned non ok status:"
+literal|"non ok status: "
 operator|+
 name|httpStatus
 operator|+
@@ -2954,6 +2925,8 @@ throw|throw
 operator|new
 name|RemoteSolrException
 argument_list|(
+name|baseUrl
+argument_list|,
 name|httpStatus
 argument_list|,
 literal|"Could not parse response with encoding "
@@ -2970,6 +2943,8 @@ init|=
 operator|new
 name|RemoteSolrException
 argument_list|(
+name|baseUrl
+argument_list|,
 name|httpStatus
 argument_list|,
 name|msg
@@ -3034,6 +3009,8 @@ throw|throw
 operator|new
 name|RemoteSolrException
 argument_list|(
+name|baseUrl
+argument_list|,
 name|httpStatus
 argument_list|,
 name|e
@@ -3215,6 +3192,8 @@ init|=
 operator|new
 name|RemoteSolrException
 argument_list|(
+name|baseUrl
+argument_list|,
 name|httpStatus
 argument_list|,
 name|reason
@@ -3876,11 +3855,14 @@ name|RemoteSolrException
 extends|extends
 name|SolrException
 block|{
-comment|/**      * @param code Arbitrary HTTP status code      * @param msg Exception Message      * @param th Throwable to wrap with this Exception      */
+comment|/**      * @param remoteHost the host the error was received from      * @param code Arbitrary HTTP status code      * @param msg Exception Message      * @param th Throwable to wrap with this Exception      */
 DECL|method|RemoteSolrException
 specifier|public
 name|RemoteSolrException
 parameter_list|(
+name|String
+name|remoteHost
+parameter_list|,
 name|int
 name|code
 parameter_list|,
@@ -3895,6 +3877,12 @@ name|super
 argument_list|(
 name|code
 argument_list|,
+literal|"Error from server at "
+operator|+
+name|remoteHost
+operator|+
+literal|": "
+operator|+
 name|msg
 argument_list|,
 name|th
